# nix-flake-poetry-example

./: README.md  flake.nix  pyproject.toml
src/nix_flake_poetry_example/: __init__.py
