[tool.poetry]
name = "nix-flake-poetry-example"
version = "0.1.0"
description = ""
authors = ["Brian Dawn <brian.t.dawn@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.20.2"
torch = "^1.8.1"
typing-extensions = "^3.7.4"

[tool.poetry.dev-dependencies]
black = "^20.8b1"

[tool.poetry.scripts]
nix-flake-poetry-example = 'nix_flake_poetry_example:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

